Setting footer to position sticky to prevent the product details from overlapping the footer when the user resizes the window height

--- a/src/global.css
+++ b/src/global.css
@@ -659,6 +659,10 @@ button > img{
   }
 }
 
+footer {
+  position: sticky;
+}
+
 .footer-content {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(23%, 1fr));
